[metadata]
name = reverse-string
version = 0.0.1
author = Your Name
author_email = you@example.com
description = A simple Python package to reverse strings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<yourusername>/reverse-string-pypi
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
